--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,23 @@
   --first-plan: 14, 23, 56;
   --third-plan: 36, 60, 102;
 }
-
-html, body, *{
+html{
+  overflow: overlay;
+}
+body, *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 
-html, body{
-  width: 100%;
-  height: 100%;
-}
 body{
+  width: 100%;
   background-color: rgb(var(--first-plan));
   overflow: overlay;
+
 }
+
 #root{
-  overflow-x: hidden;
+  
 }
